syntax = "proto3";

package proto;
option go_package = "github.com/derpartizanen/gophkeeper/proto";

message LoginRequest {
  string username = 1; // Name of a user.
  string security_key = 2; // Hashed encryption key generated by client.
}

message LoginResponse {
  string access_token = 1; // JWT access token.
}

service Auth {
  // Authenticate a user.
  rpc Login(LoginRequest) returns (LoginResponse);
}
